--- a/install/files/themes/mytheme/scss/editor.scss
+++ b/install/files/themes/mytheme/scss/editor.scss
@@ -11,7 +11,7 @@
 @import "base/reset";
 @import "base/base";
 @import "partials/global";
-@import "typography";
+@import "partials/typography";
 
 body {
 	padding: 10px;
