--- a/install/files/themes/mytheme/scss/_settings.scss
+++ b/install/files/themes/mytheme/scss/_settings.scss
@@ -7,9 +7,13 @@ $default-text-color: #444;
 $default-font-family: Arial, Helvetica, sans-serif;
 
 // Default responsive font sizes
-$font-size-small: 18px;
+$font-size-small: 16px;
 $font-size-medium: 18px;
-$font-size-large: 16px;
+$font-size-large: 20px;
+
+// Colors
+$color-success: green;
+$color-error: red;
 
 // Breakpoints
 $breakpoints: (
