Updated from open country project

--- a/install/files/app/client/css/leftandmain.css
+++ b/install/files/app/client/css/leftandmain.css
@@ -15,3 +15,11 @@ fieldset.field.ss-gridfield {
 input.bulkSelect, input.bulkSelectAll {
 	position: static !important;
 }
+
+/* Upload link doesn't work in dialogs, needs to be drag and drop */
+.ui-dialog .uploadfield .uploadfield__droptext button:first-child {
+	display: none;
+}
+.ui-dialog .uploadfield .uploadfield__droptext .uploadfield__join:before {
+	content: 'Drop file here ';
+}
