--- a/install/files/themes/mytheme/scss/editor.scss
+++ b/install/files/themes/mytheme/scss/editor.scss
@@ -6,8 +6,8 @@
 
 @import "settings";
 
+@import "mixins/common";
 @import "mixins/mixins";
-@import "mixins/custom";
 @import "base/reset";
 @import "base/base";
 @import "partials/global";
