--- a/install/files/themes/mytheme/scss/app.scss
+++ b/install/files/themes/mytheme/scss/app.scss
@@ -4,8 +4,8 @@
 
 @import "settings";
 
+@import "mixins/common";
 @import "mixins/mixins";
-@import "mixins/custom";
 @import "base/reset";
 @import "base/base";
 @import "base/ssbase";
@@ -21,4 +21,4 @@
 
 @import "pages/page";
 
-@import "elements/content";
+@import "blocks/content";
