--- a/install/files/themes/mytheme/scss/base/_base.scss
+++ b/install/files/themes/mytheme/scss/base/_base.scss
@@ -11,13 +11,19 @@ span, strong, em, a, b, i {
 input, select, textarea {
 	line-height: normal;	
 }
-body {
+
+// Prevent font size changes on mobile and make font antialiasing nice
+html,body {
 	-webkit-text-size-adjust:none;
 	-ms-text-size-adjust:none;
 	-moz-text-size-adjust:none;
 	text-size-adjust:none;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+}
+// Chrome no-longer supports -webkit-text-size-adjust:none; but setting a max-height on elements also prevents this
+body * {
+	max-height: 999999px;
 }
 
 // base.css, part of YUI's CSS Foundation 
@@ -117,9 +123,6 @@ br {
 	font-size: 0;
 	line-height: 0;	
 }
-
-// Chris Bolt add support for new HTML 5 elements 
-main {display:block;}
 
 // Chris Bolt, no focus outline 
 *:focus {
