--- a/install/files/themes/mytheme/scss/_settings.scss
+++ b/install/files/themes/mytheme/scss/_settings.scss
@@ -5,6 +5,8 @@ $default-background: #fff;
 $default-line-height: 1.35em;
 $default-text-color: #444;
 $default-font-family: Arial, Helvetica, sans-serif;
+$default-font-weight: 400;
+$default-font-weight-bold: 700;
 
 // Default responsive font sizes
 $font-size-small: 16px;
