--- a/install/files/themes/mytheme/scss/partials/_form.scss
+++ b/install/files/themes/mytheme/scss/partials/_form.scss
@@ -107,16 +107,16 @@ form.ss-form {
 /* Messages */
 .message {
 	display: block;
-	font-weight: bold;
+	font-weight: $default-font-weight-bold;
 	margin-bottom: 1rem;
 	.field & {
 		margin-bottom: 0;
 		margin-top: 0.5rem;
 	}
-	.good {
+	&.good {
         color: $color-success;
     }
-	.error, .bad, .required, .validation {
+	&.error, &.bad, &.required, &.validation {
         color: $color-error;
     }
 }
