--- a/install/files/themes/mytheme/scss/partials/_global.scss
+++ b/install/files/themes/mytheme/scss/partials/_global.scss
@@ -39,7 +39,7 @@ a, button {
 		transition: all .3s ease;
 	}
 	svg {
-		text, line, polyline, path {
+		text, line, polyline, path, ellipse {
 			transition: all .3s ease;
 		}
 	}
